# optimal-route

./: README.md  pyproject.toml
optimal_route/: __init__.py  main.py
optimal_route/models/: features.py  geojsonbase.py  geometries.py  geotypes.py  routes.py
optimal_route/utils/: buffer.py  route.py
