[tool.poetry]
name = "optimal-route"
version = "0.1.0"
description = ""
authors = ["Bogdan Objilean <bodea0001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
shapely = "^2.0.6"
networkx = "^3.4.2"
pydantic = "^2.10.4"
pyproj = "^3.7.0"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.0"
geopandas = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
